Overflow bug removed

--- a/app/src/scss/components/Layouts/_header.scss
+++ b/app/src/scss/components/Layouts/_header.scss
@@ -6,7 +6,6 @@
     align-items: center;
     width: 75%;
     height: 100px;
-    overflow: hidden;
     margin: 0 auto;
     margin-top: 50px;
     /* --- Logo --- */
